--- a/appgate-tech-test/src/main/resources/application.properties
+++ b/appgate-tech-test/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 
+
+#mysql
+#spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.initialization-mode=always
+spring.datasource.url=jdbc:mysql://mine-db.c7cxcoppojml.us-east-1.rds.amazonaws.com:3306/tech_test_appgate_db?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username=tech_test_appgate_user
+spring.datasource.password=Q!w2E#r4
