--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -17,4 +17,4 @@ jobs:
           java-version: '11'
           distribution: 'adopt'
       - name: Build with Maven
-        run: mvn -B package --file appgate-tech-test/pom.xml
+        run: mvn -B package --file appgate-tech-test/pom.xml --batch-mode --update-snapshots verify
