--- a/appgate-tech-test/pom.xml
+++ b/appgate-tech-test/pom.xml
@@ -62,6 +62,11 @@
 			<artifactId>spring-webmvc</artifactId>
 			<version>5.3.9</version>
 		</dependency>
+		<dependency>
+			<groupId>org.junit.vintage</groupId>
+			<artifactId>junit-vintage-engine</artifactId>
+			<scope>test</scope>
+		</dependency>
 
 	</dependencies>
 
